--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,43 @@
 * {
     box-sizing: border-box;
 }
+
+.card {
+    border: solid orangered 5px;
+    box-shadow: 5px 10px paleturquoise;
+    display: flex;
+    flex-direction: column;
+    width: 25vw;
+    height: auto;
+    margin: 0 auto;
+    padding: 2em;;
+}
+
+.card__image {
+    max-width: 100%;
+    width: 300px;
+    height: auto;
+}
+
+.card__fact {
+    font-style: italic;
+}
+
+.card__information {
+    border: solid black 1px;
+    padding: 1em;
+    margin-top: .5em;
+}
+
+.card__list {
+    padding-left: 0;;
+}
+
+.label {
+    font-weight: bold;
+}
+
+.item {
+    list-style: none;
+    margin-top: 1em;
+}
